--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -536,39 +536,22 @@
     
                     &.ms_03 {
                         article {
-                            @include fixed-layout_1920;
-                            @include paddingLeft_10();
-                            padding: 0 4%;
                             .box {
-                                position: relative;
-                                display: flex; justify-content: unset;
-                                flex-direction: column;
-                                height: auto;
-    
                                 .text_wrap {
-                                    // border: 1px solid #f00;
-                                    align-items: unset; justify-content: unset; min-width: unset; height: auto;
-                                    flex-direction: column;
-                                    padding-top: 120px;
-                                    background-color: #e7e7e9;
-                                    z-index: 3;
                                     h2 {@include hidaFont_50;}
-                                    p {
-                                        @include hidaFont_16;
-                                        margin-top: 20px;
-                                    }
+                                    p {@include hidaFont_16;}
                                 }
                                 
                                 .img_wrap {
-                                    max-width: 100%;
                                     // width: 100%;
                                     &.img_01 {
-                                        aspect-ratio: 1/3;
+                                        height: 500px;
                                         img {
                                             all: unset;
                                             position: absolute; left: 50%; top: 120px;
                                             transform: translateX(-50%);
-                                            height: 400px;
+                                            height: 500px;
+                                            // 여기까지
                                         }
                                     }
                                     &.img_02 {
