--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -619,6 +619,7 @@ body {
                                         // &:not(:first-child) {opacity: 0;}
                                         // &:nth-child(1) {margin-top: 200px;}
                                         // &:nth-child(2) {margin-top: 400px;}
+                                        &:nth-child(1), &:nth-child(2) {max-width: 958px; width: 100%;}
                                         &:nth-child(1) {
                                             z-index: 2;
                                         }
