--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -575,7 +575,9 @@ body {
 
                 &.ms_03 {
                     background-color: #e7e7e9;
+                    @include fullsize;
                     article {
+                        @include fullsize;
                         @include fixed-layout_1920;
                         @include paddingLeft_10();
 
@@ -609,6 +611,7 @@ body {
                                     img {
                                         position: absolute; left: 50%; top: 50%;
                                         transform: translateX(-50%) translateY(-50%);
+                                        max-width: 568px;
                                         &:nth-child(1) {z-index: 1;}
                                     }
                                 }
