--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -584,7 +584,7 @@ body {
                         .box {
                             position: relative;
                             display: flex; justify-content: space-between;
-                            height: 100vh;
+                            width: 100%; height: 100vh;
                             overflow: hidden;
 
                             .text_wrap {
